<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profileContentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Profile Image -->
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profileImageView"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:padding="3sp"
            android:scaleType="centerCrop"
            app:strokeColor="?attr/colorAccent"
            app:strokeWidth="3sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/CircularShape" />

        <!-- Name TextView -->
        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:hint="Enter your name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/profileImageView"
            app:layout_constraintTop_toTopOf="@id/profileImageView" />

        <!-- Nickname TextView -->
        <TextView
            android:id="@+id/nicknameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="Enter your nickname"
            app:layout_constraintStart_toStartOf="@id/nameTextView"
            app:layout_constraintTop_toBottomOf="@id/nameTextView" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/info_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            android:background="?attr/backgroundTint"
            android:padding="5sp"
            app:layout_constraintTop_toBottomOf="@id/profileImageView">

            <!-- Birthday Label & Value -->
            <TextView
                android:id="@+id/birthdayLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Birthday:"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/birthdayValueTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:hint="YYYY-MM-DD"
                app:layout_constraintBottom_toBottomOf="@id/birthdayLabelTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/birthdayLabelTextView"
                app:layout_constraintTop_toTopOf="@id/birthdayLabelTextView" />

            <!-- Homepage Label & Value -->
            <TextView
                android:id="@+id/homepageLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Homepage:"
                app:layout_constraintStart_toStartOf="@id/birthdayLabelTextView"
                app:layout_constraintTop_toBottomOf="@id/birthdayLabelTextView" />

            <TextView
                android:id="@+id/homepageValueTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:hint="https://yourwebsitehere.com"
                app:layout_constraintBottom_toBottomOf="@id/homepageLabelTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/homepageLabelTextView"
                app:layout_constraintTop_toTopOf="@id/homepageLabelTextView" />

            <!-- Address Label & Value -->
            <TextView
                android:id="@+id/addressLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Address:"
                app:layout_constraintStart_toStartOf="@id/homepageLabelTextView"
                app:layout_constraintTop_toBottomOf="@id/homepageValueTextView" />

            <TextView
                android:id="@+id/addressValueTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:hint="123 App Street"
                app:layout_constraintBottom_toBottomOf="@+id/addressLabelTextView"
                app:layout_constraintStart_toEndOf="@+id/addressLabelTextView" />

            <!-- Phone Number Label & Value -->
            <TextView
                android:id="@+id/phoneNumberLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Phone Number:"
                app:layout_constraintStart_toStartOf="@id/addressLabelTextView"
                app:layout_constraintTop_toBottomOf="@id/addressLabelTextView" />


            <TextView
                android:id="@+id/phoneNumberValueTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:hint="7801234567"
                app:layout_constraintStart_toEndOf="@id/phoneNumberLabelTextView"
                app:layout_constraintTop_toTopOf="@+id/phoneNumberLabelTextView"
                tools:layout_constraintTop_toTopOf="@id/phoneNumberLabelTextView" />

            <!-- Email Label & Value -->
            <TextView
                android:id="@+id/emailLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email:"
                app:layout_constraintStart_toStartOf="@id/phoneNumberLabelTextView"
                app:layout_constraintTop_toBottomOf="@id/phoneNumberValueTextView" />

            <TextView
                android:id="@+id/emailValueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:hint="justin@example.com"
                app:layout_constraintStart_toEndOf="@+id/emailLabelTextView"
                app:layout_constraintTop_toTopOf="@+id/emailLabelTextView" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/toggleGeolocationSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            android:text="Toggle Geolocation          "
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/info_container" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/button_container"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toggleGeolocationSwitch">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/eventsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Events"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/scanQRCodeButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Scan QR Code"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/eventsButton" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/adminButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Admin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/scanQRCodeButton" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
